# dono_server

./: .gitignore  Cargo.toml
sql/: schema.sql
sql/local/: add_video.sql  get_current.sql  get_previous.sql
sql/youtube/: add_video.sql  get_current.sql  get_previous.sql
src/: database.rs  error.rs  local.rs  main.rs  server.rs  youtube.rs
