[package]
name = "dono-server"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
env_logger = { version = "0.6.0", default-features = false, features = ["termcolor", "atty"] }

directories = "1.0.2"

once_cell = "0.1.8"
regex = "1.1.0"

http_req = "0.4.1"
tiny_http = "0.6.1"

serde = { version = "1.0.82", features = ["derive"] }
serde_json = "1.0.33"
toml = "0.4.10"

rusqlite = { version = "0.16.0", features = ["bundled"] }


